Fixed Tabs spacing

--- a/src/styles/bds/tabs.sass
+++ b/src/styles/bds/tabs.sass
@@ -4,7 +4,7 @@
     position: relative
 .tabs.has-hr > ul > li:not(:hover,.is-active) > a,
 .tabs.is-boxed:hover > ul > li:not(:hover,.is-active) > a
-    color: rgba($text,.65)
+    color: rgba($text,.75)
 
 .tabs:not(.is-boxed,.is-toggle) + hr
     margin-top: 0;
@@ -42,7 +42,7 @@
 
 .tabs.is-toggle a
     padding: .3125em 1em
-    margin: .25em
+    margin: .375em
     border-radius: $tabs-toggle-link-radius
 .tabs.is-toggle li:first-child
     border-radius: $tabs-toggle-link-radius 0 0 $tabs-toggle-link-radius
@@ -53,14 +53,14 @@
 .tabs.is-toggle.has-hr > ul
     background-color: $tabs-toggle-link-active-background-color
     box-shadow: inset 0 0 0 1px rgba($black,.04), inset 0 0.25em 0.5em -0.25em rgba($black,.08)
-    border-radius: $radius-large
+    border-radius: 10px
 .tabs.is-toggle.has-hr:not(.is-fullwidth) > ul
     flex-grow: unset
 .tabs.is-toggle.has-hr > ul > li.is-active > a
     background-color: $white
     box-shadow: $card-shadow
 .tabs.is-toggle.has-hr > ul > li:not(.is-active) > a:hover
-    background-color: transparent
+    background-color: rgba($white,.4)
 
 // Rounded toggle
 .tabs.is-toggle.is-toggle-rounded  li:first-child
